# ATC-Signal-Replay

./: .gitignore  ASCControllerEventTypes.csv  Example.ipynb  LastFailEventLog.db  README.md  atc_replay.py  generate_conflicts.py  impute_actuations.sql  load_conflict_events.sql  load_event_log.sql  pyproject.toml  requirements.txt  run_sim.py  send_ntcip.py
.github/workflows/: unit-tests.yml
SQL/: generate_activation_feed.sql  load_conflict_events.sql  load_from_path.sql  load_maxtime_db.sql
experiments/: run_latency_scaling_study.py
experiments/latency_scaling_runs/: report.md
firmware_validation/: README.md  conflict_monitor_generation.ipynb  extract_data.py  firmware_validate.py  settings.json  walkthrough.ipynb
src/atc_signal_replay/: collector.py  comparison.py  config.py  orchestrator.py  replay.py
src/atc_signal_replay/sql/: impute_actuations.sql  load_from_path.sql  load_maxtime_db.sql
src/signal_replay/: __init__.py  batch_runner.py  collector.py  comparison.py  config.py  ntcip.py  orchestrator.py  replay.py  report.py  test_suite.py
src/signal_replay/sql/: generate_activation_feed.sql  impute_actuations.sql  load_conflict_events.sql
tests/: __init__.py  conftest.py  test_batch_runner_resilience.py  test_centralized_events.py  test_collector_watermark.py  test_firmware_validate_tod.py  test_live_integration.py  test_memory_regressions.py  test_phase_call_similarity.py  test_timing_mocked.py
